# system-e

./: .gitignore  .lia.cache  .test.aux  Book_1.v  README.md  debug.smt2  dune-project  system-e.opam  test.glob
src/: dune  e-construction.smt2  e.smt  e.smt2  euclid_tactics.ml  tactics_syntax.ml4  tactics_syntax.mlg
theories/: #Book_1.v#  .Book_1.aux  Axioms.v  Book_1.glob  Book_1.v  ConstructionRules.v  DiagrammaticInferences.v  MetricInferences.v  Sorts.v  SuperpositionInferences.v  SystemE.v  TransferInferences.v  dune
