synopsis:     "System E: A Formal System for Euclid's Elements"
description:  "Coq/Z3 implementation of a variant of System E: A Formal System for Euclid's Elements"
name:         "system-e"
opam-version: "2.0"
maintainer:   "kaiyuy@cs.princeton.edu"
authors:      "Kaiyu Yang"
homepage:     "https://github.com/princeton-vl/system-e"
bug-reports:  "https://github.com/princeton-vl/system-e"
dev-repo:     "git+hhttps://github.com/princeton-vl/system-e"
license:      "BSD 2"
doc:          "https://github.com/princeton-vl/system-e"

depends: [
  "ocaml"         { >= "4.07.1"           }
  "coq"           { >= "8.9.0" & < "8.10" }
  "dune"          { build = "1.10.0"    }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
