(library
  (name euclid_plugin)
  (public_name system-e.plugin)
  (synopsis "Coq Template Plugin")
  (flags :standard -w -27)       ; CoqPP codes requires this
  (libraries
    coq.vernac                      ; needed for vernac extend
    coq.plugins.ltac                ; needed only for tactic extend
    core
  )
)

(rule
 (targets tactics_syntax.ml)
 (deps (:pp-file tactics_syntax.ml4) )
 (action (bash "camlp5 pa_o.cmo pr_o.cmo %{lib:coq.grammar:grammar.cma} -loc loc -impl %{pp-file} -o %{targets}")))
; camlp5 may need the following additional libs, YMMV
; pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo


