(library
  (name euclid_plugin)
  (public_name system-e.plugin)
  (synopsis "System E: A Formal System for Euclid's Elements")
  (flags :standard -w -27)       ; CoqPP codes requires this
  (libraries
    coq.vernac                      ; needed for vernac extend
    coq.plugins.ltac                ; needed only for tactic extend
    coq.kernel
    z3
  )
)

; This will let Dune know about Coq's .mlg grammar files.
(coq.pp (modules tactics_syntax))